Jorge Lara - UPdate variables

--- a/microservice_demo/postgres-app-pod.yml
+++ b/microservice_demo/postgres-app-pod.yml
@@ -11,8 +11,8 @@ spec:
       image: postgres:9.5
       env:
         - name: POSTGRES_USER
-          value: admin
+          value: "postgres"
         - name: POSTGRES_PASSWORD
-          value: admin
+          value: "postgres"
       ports:
         - containerPort: 5432
